# primes

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
axiom1/: README.md  __init__.py  prime_cascade.py  prime_coordinate_index.py  prime_core.py  prime_geodesic.py
axiom1/test/: __init__.py  run_all_tests.py  test_prime_cascade.py  test_prime_coordinate_index.py  test_prime_core.py  test_prime_geodesic.py
axiom2/: README.md  __init__.py  fibonacci_core.py  fibonacci_entanglement.py  fibonacci_resonance_map.py  fibonacci_vortices.py  performance_tuning.py
axiom2/test/: __init__.py  run_all_tests.py  test_fibonacci_core.py  test_fibonacci_entanglement.py  test_fibonacci_resonance_map.py  test_fibonacci_vortices.py
axiom3/: README.md  __init__.py  accelerated_analysis.py  coherence.py  fold_topology.py  interference.py  spectral_core.py  spectral_signature_cache.py
axiom3/test/: __init__.py  run_all_tests.py  test_accelerated_analysis.py  test_coherence.py  test_fold_topology.py  test_interference.py  test_spectral_core.py  test_spectral_signature_cache.py
axiom4/: README.md  __init__.py  accelerated_observer.py  adaptive_observer.py  integrated_tools.py  observer_cache.py  quantum_tools.py  resonance_memory.py  spectral_navigation.py
axiom4/test/: __init__.py  run_all_tests.py  test_accelerated_observer.py  test_adaptive_observer.py  test_integration.py  test_observer_cache.py  test_performance_tuning.py  test_quantum_tools.py  test_resonance_memory.py  test_spectral_navigation.py
axiom5/: README.md  __init__.py  axiom_synthesis.py  failure_analysis.py  meta_observer.py  recursive_coherence.py  spectral_mirror.py
axiom5/test/: __init__.py  run_all_tests.py  test_axiom_synthesis.py  test_failure_analysis.py  test_meta_observer.py  test_recursive_coherence.py  test_spectral_mirror.py
benchmark/: __init__.py  axiom2_128bit_breakthrough.py  axiom5_128bit_breakthrough.py  benchmark_runner.py  extended_semiprime_test.py  limited_semiprime_test.py  performance_profiler.py  quick_benchmark.py  run_benchmark_suite.sh  semiprime_benchmark.py  test_semiprime_quick.py  ultimate_128bit_breakthrough.py  ultimate_64bit_test.py
factorizer/: __init__.py  cli.py
factorizer/test/: test_cli.py
